[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-auth>=2.38.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "praw>=7.8.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "telegram>=0.0.1",
    "telethon>=1.39.0",
]
